framec/tests/snapshots/kotlin_snapshots__async_attribute.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"kotlin\")"
---
class AsyncFetcherFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class AsyncFetcherFrameContext(val _event: AsyncFetcherFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class AsyncFetcherCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: AsyncFetcherFrameEvent? = null
    var parent_compartment: AsyncFetcherCompartment? = null

    fun copy(): AsyncFetcherCompartment {
        val c = AsyncFetcherCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class AsyncFetcher {
    private var machine: _AsyncFetcherMachine
    private var busy: Boolean
    private var in_flight: String?

    init {
        this.machine = _AsyncFetcherMachine()
        this.busy = false
        this.in_flight = null
    }

    fun __frame_init() {
    }

    suspend fun fetch(key: String): String {
        if (this.busy) {
            throw IllegalStateException(
                "E703: system busy: cannot enter 'fetch' while '${this.in_flight}' is in flight"
            )
        }
        this.busy = true
        this.in_flight = "fetch"
        try {
            return this.machine.fetch(key)
        } finally {
            this.in_flight = null
            this.busy = false
        }
    }

    suspend fun init() {
        this.machine.init()
    }

    companion object {
        fun __create(): AsyncFetcher {
            val c = AsyncFetcher()
            c.__frame_init()
            return c
        }    }
}


class _AsyncFetcherMachine {
    private var _state_stack: MutableList<AsyncFetcherCompartment>
    private var __compartment: AsyncFetcherCompartment
    private var __next_compartment: AsyncFetcherCompartment?
    private var _context_stack: MutableList<AsyncFetcherFrameContext>
    var cache: Cache = nil

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Ready", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Ready" to listOf("Ready"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): AsyncFetcherCompartment {
        var comp: AsyncFetcherCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = AsyncFetcherCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: AsyncFetcherCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private suspend fun __kernel(__e: AsyncFetcherFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: AsyncFetcherCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = AsyncFetcherFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: AsyncFetcherFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = AsyncFetcherFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = AsyncFetcherFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private suspend fun __router(__e: AsyncFetcherFrameEvent) {
        if (__compartment.state == "Ready") {
            _state_Ready(__e, __compartment)
        }
    }

    private fun __transition(next: AsyncFetcherCompartment) {
        __next_compartment = next
    }

    suspend fun fetch(key: String): String {
        val __e = AsyncFetcherFrameEvent("fetch", mutableListOf(key))
        val __ctx = AsyncFetcherFrameContext(__e, "")
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            val __result = _context_stack[_context_stack.size - 1]._return as String
            _context_stack.removeAt(_context_stack.size - 1)
            return __result
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    private suspend fun _state_Ready(__e: AsyncFetcherFrameEvent, compartment: AsyncFetcherCompartment) {
        if (__e._message == "fetch") {
            this._s_Ready_hdl_user_fetch(__e, compartment)
            return
        }
    }

    private suspend fun _s_Ready_hdl_user_fetch(__e: AsyncFetcherFrameEvent, compartment: AsyncFetcherCompartment) {
        val key = __e._parameters[0] as String
        _context_stack[_context_stack.size - 1]._return = this.cache.get(key)
    }

    suspend fun init() {
        val __e = AsyncFetcherFrameEvent("$>", mutableListOf<Any?>())
        val __ctx = AsyncFetcherFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    companion object {
        fun __create(): AsyncFetcher {
            val c = AsyncFetcher()
            c.__frame_init()
            return c
        }    }
}
