framec/tests/snapshots/kotlin_snapshots__forward.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"07_forward\", \"kotlin\")"
---
class ForwardFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class ForwardFrameContext(val _event: ForwardFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class ForwardCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: ForwardFrameEvent? = null
    var parent_compartment: ForwardCompartment? = null

    fun copy(): ForwardCompartment {
        val c = ForwardCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class Forward {
    private var _state_stack: MutableList<ForwardCompartment>
    private var __compartment: ForwardCompartment
    private var __next_compartment: ForwardCompartment?
    private var _context_stack: MutableList<ForwardFrameContext>
    var starts: Int = 0
    var middles: Int = 0

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Start", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
        val __e = ForwardFrameEvent("$>", __compartment.enter_args)
        val __ctx = ForwardFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Start" to listOf("Start"),
            "Middle" to listOf("Middle"),
            "End" to listOf("End"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): ForwardCompartment {
        var comp: ForwardCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = ForwardCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: ForwardCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private fun __kernel(__e: ForwardFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: ForwardCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = ForwardFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: ForwardFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = ForwardFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = ForwardFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private fun __router(__e: ForwardFrameEvent) {
        if (__compartment.state == "Start") {
            _state_Start(__e, __compartment)
        } else if (__compartment.state == "Middle") {
            _state_Middle(__e, __compartment)
        } else if (__compartment.state == "End") {
            _state_End(__e, __compartment)
        }
    }

    private fun __transition(next: ForwardCompartment) {
        __next_compartment = next
    }

    fun run() {
        val __e = ForwardFrameEvent("run", mutableListOf())
        val __ctx = ForwardFrameContext(__e, null)
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            _context_stack.removeAt(_context_stack.size - 1)
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    fun finish() {
        val __e = ForwardFrameEvent("finish", mutableListOf())
        val __ctx = ForwardFrameContext(__e, null)
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            _context_stack.removeAt(_context_stack.size - 1)
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    private fun _state_Start(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        if (__e._message == "run") {
            this._s_Start_hdl_user_run(__e, compartment)
            return
        }
    }

    private fun _state_Middle(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        if (__e._message == "finish") {
            this._s_Middle_hdl_user_finish(__e, compartment)
            return
        }
        if (__e._message == "run") {
            this._s_Middle_hdl_user_run(__e, compartment)
            return
        }
    }

    private fun _state_End(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        if (__e._message == "finish") {
            this._s_End_hdl_user_finish(__e, compartment)
            return
        }
    }

    private fun _s_Start_hdl_user_run(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        self.starts = self.starts + 1
        val __compartment = __prepareEnter("Middle", mutableListOf<Any?>(), mutableListOf<Any?>())
        __compartment.forward_event = __e
        __transition(__compartment)
        return
    }

    private fun _s_Middle_hdl_user_finish(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        val __compartment = __prepareEnter("End", mutableListOf<Any?>(), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Middle_hdl_user_run(__e: ForwardFrameEvent, compartment: ForwardCompartment) {
        self.middles = self.middles + 1
    }

    private fun _s_End_hdl_user_finish(__e: ForwardFrameEvent, compartment: ForwardCompartment) {

    }

    companion object {
        @JvmStatic fun __create(): Forward {
            val c = Forward()
            c.__frame_init()
            return c
        }    }
}
